<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_encrypt"
        android:icon="@drawable/ic_lock"
        android:title="@string/nav_encrypt" />

    <item
        android:id="@+id/nav_decrypt"
        android:icon="@drawable/ic_lock_open"
        android:title="@string/nav_decrypt" />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />

</menu>